networkpolicy/networkpolicy__basic_kafka_setup__postgresql__exception__system__egress__ports__443__nr4__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql--exception--system--egress--ports--443--nr4
  namespace: postgresql
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 443
